--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "langchain": "^0.1.30",
     "winston": "^3.13.0",
     "ws": "^8.17.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "openai": "^4.0.0"
   }
 }
